<resources>
    <string name="app_name">WeatherApp</string>
    <string name="celcius_unit">℃</string>
    <string name="fahrenheit_unit">℉</string>
    <string name="degree_symbol">°</string>
    <string name="percent_symbol">%</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="search_text">Enter Location / City Name / Zip Code</string>
    <string name="pick_location">Pick Location</string>
    <string name="units">Units</string>
    <string name="temperature_units">Temperature units</string>
    <string name="celsius">Celsius ℃</string>
    <string name="fahrenheit_u2109">Fahrenheit ℉</string>
    <string name="wind_speed_units">Wind speed units</string>
    <string name="kilometers_per_hour_km_h">Kilometers per hour (km/h)</string>
    <string name="km_h">km/h</string>
    <string name="miles_per_hour_mph">Miles per hour (mph)</string>
    <string name="mph">mph</string>
    <string name="mb">mb</string>
    <string name="network_error">Oops!! Network Issue please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="feels_like">Feels Like</string>
    <string name="average">Average</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
</resources>