<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.fragments.ForecastWeatherDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/avg_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/average"
            android:textColor="@color/light_grey_DADADA"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/temp_value"
            app:layout_constraintStart_toStartOf="@+id/temp_value"
            app:layout_constraintTop_toBottomOf="@+id/date_info" />

        <TextView
            android:id="@+id/temp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textSize="65sp"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toBottomOf="@+id/avg_info"
            tools:text="28" />

        <TextView
            android:id="@+id/temp_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/temp_value"
            app:layout_constraintTop_toTopOf="@+id/temp_value"
            tools:text="@string/celcius_unit" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <ImageView
            android:id="@+id/forecast_condition_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/date_info"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/date_info"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toTopOf="@+id/date_info"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/date_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Date info" />

        <TextView
            android:id="@+id/forecast_weather_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/temp_value"
            app:layout_constraintTop_toBottomOf="@+id/temp_value"
            tools:text="33°/27°" />


        <TextView
            android:id="@+id/forecast_weather_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/forecast_condition_icon"
            app:layout_constraintStart_toStartOf="@+id/forecast_condition_icon"
            app:layout_constraintTop_toBottomOf="@+id/forecast_condition_icon"
            tools:text="Partly cloudy" />

        <androidx.cardview.widget.CardView
            android:id="@+id/hourly_weather_info_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toBottomOf="@+id/barrier3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourly_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/hourly_weather_item" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/astro_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toBottomOf="@+id/hourly_weather_info_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sunrise"
                    android:textColor="@color/light_grey_DADADA"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise"
                    tools:text="7:30 AM" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sunrise"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise_value"
                    tools:ignore="ContentDescription" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/sunrset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sunset"
                    android:textColor="@color/light_grey_DADADA"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunrset_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise"
                    tools:text="6:30 PM" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sunset"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise_value"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/more_details_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guidline"
            app:layout_constraintTop_toBottomOf="@+id/astro_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_image" />

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/light_grey_DADADA"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity"
                    tools:text="63%" />

                <ImageView
                    android:id="@+id/humidity_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/humidity"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/wind"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/wind_image" />

                <TextView
                    android:id="@+id/wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_grey_DADADA"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/wind"
                    tools:text="10 km/h" />


                <ImageView
                    android:id="@+id/wind_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline1"
                    app:layout_constraintStart_toStartOf="@+id/center_guideline1"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="forecast_weather_condition,forecast_weather_info"
            tools:layout_editor_absoluteY="196dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
